--- a/index.html
+++ b/index.html
@@ -182,12 +182,14 @@
 	transition: 5s;
 }
 .containerSlide .slider .slide.slide1 {
-	background: url(img/slider.jpg);
+	/* background: url(img/slider.jpg); */
+	background: url(img/slider_img/biologia_molecular.jpg);
 	background-size: cover;
 	background-position: center;
 }
 .containerSlide .slider .slide.slide2 {
-	background: url(img/slider2.jpg);
+	/* background: url(img/slider2.jpg); */
+	background: url(img/slider_img/citogenetica.jpg);
 	background-size: cover;
 	background-position: center;
 }
@@ -203,7 +205,8 @@
 }
 
 .containerSlide .slider .slide.slide5 {
-	background: url(img/slider3.jpg);
+	/* background: url(img/slider3.jpg); */
+	background: url(img/slider_img/citometria.jpg);
 	background-size: cover;
 	background-position: center;
 }
@@ -275,7 +278,7 @@
                 Mendel inicia sus actividades en la ciudad de Morelia, Michoacán el día 4 de abril de
                 2004. La empresa cuenta con un servicio de laboratorio que atiende las necesidades de
                 diagnóstico genético en las disciplinas de citogenética clásica, citogenética molecular,
-                biología molecular y laboratorio clínico siendo la primera empresa de su tipo establecida
+                biología molecular, citometría de flujo y laboratorio clínico siendo la primera empresa de su tipo establecida
                 en el estado de Michoacán.
             </p>
             <a id="enlace-aviso_privacidad" data-toggle="modal" data-target="#modal-aviso_privacidad">
